Fix styling for shop page items and add truncateText utility function

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,10 +1,24 @@
-.container img {
-    max-width: 150px;
-    margin: 0 auto;
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5px;
 }
 
-.container h3 {
+.item h3 {
+    height: 54px;
+}
+
+.item img {
+    width: 100%;
+    aspect-ratio: 1;
+    object-fit: contain;
+}
+
+.item h3 {
     font-size: 12px;
+    text-align: center;
 }
 
 .itemsCounter {
