--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+    width: 95vw;
     display: flex;
     justify-content: right;
     align-items: center;
