--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -1,7 +1,15 @@
 .productList {
+    width: initial;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     align-items: center;
     gap: 35px;
     margin-top: 50px;
+    padding: 15px;
+}
+
+@media screen and (min-width: 768px) {
+    .productList {
+        width: 50vw;
+    }
 }
